--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@ html, body {
     padding: 0;
     height: 100%;
     overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    font-family: "Arame Mono";
 }
 
 #info {
