--- a/main.css
+++ b/main.css
@@ -81,3 +81,11 @@ body {
     font-size: 13px;
   }
 
+  #three-js-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;  
+    height: 100%;
+    z-index: 1;
+  } 
