--- a/main.css
+++ b/main.css
@@ -88,3 +88,12 @@ body {
     height: 100%;
     z-index: 1;
   } 
+
+  #light-rotation-slider {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    z-index: 2;
+}
