added toggle for ambient light, it looks ugly at the moment and the loading for the three.js scene is a mess, please fix

--- a/main.css
+++ b/main.css
@@ -92,8 +92,67 @@ body {
   #light-rotation-slider {
     position: absolute;
     bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80%;
+    left: 0%;
+    transform: translateX(50%);
+    width: 50%;
     z-index: 2;
+    accent-color: var(--accent);
+    color: var(--bg);
+}
+
+  /* The switch - the box around the slider */
+  .switch {
+    position: absolute;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--accent);
+    -webkit-transition: .4s;
+    transition: .4s;
+    border: 2px solid #ffffff;
+    box-sizing: border-box;
+    
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 2px;
+    bottom: 2px;
+    background-color: var(--bg);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: var(--bg);
+    border-color: var(--accent);
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
 }
