--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ body {
   .menu-container .col .menu-item {
     background: var(--accent);
     color: var(--bg);
+    text-decoration: none;
     margin: 0.075rem;
     padding: 0.075rem;
     font-size: 25px;
@@ -58,6 +59,14 @@ body {
   .menu-container .col-2 .menu-item {
     position: relative;
     left: 200px;
+  }
+  /* disable link colors */
+  .menu-container .col .menu-item a,
+  .menu-container .col .menu-item a:visited,
+  .menu-container .col .menu-item a:hover,
+  .menu-container .col .menu-item a:active {
+    color: inherit;
+    text-decoration: none;
   }
   
   .marquee-container {
@@ -207,18 +216,60 @@ input:checked + .slider:before {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
+  gap: 1.5rem;
+  padding: 2rem;
   margin-top: 100px;
   z-index: 2;
 }
 
 .project-card {
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid var(--accent);
-  border-radius: 10px;
-  padding: 20px;
-  margin: 10px;
+  position: relative;
   width: 300px;
-  transition: transform 0.3s ease;
+  height: 200px;
+  background-color: var(--accent);
+  /* border-radius: 8px; */
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  margin: 10px;
+}
+.project-card:hover {
+  transform: scale(1.05);
+}
+.project-card img {
+  width: 48px;
+  height: 48px;
+  margin-bottom: 16px;
+  object-fit: contain;
+}
+.project-card h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: var(--bg);
+}
+.project-card p {
+  font-size: 16px;
+  letter-spacing: 1px;
+  margin-left: 1vh;
+  color: var(--bg);
+}
+.popup {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 55px;
+  background-color: var(--bg);
   color: var(--accent);
+  padding: 16px;
+  transition: bottom 0.3s ease-in-out;
+  bottom: -80px;
+}
+.project-card:hover .popup {
+  bottom: 0;
+}
+.popup p {
+  font-size: 12px;
+  color: var(--accent);
+  font-family: monospace;
 }
