--- a/main.css
+++ b/main.css
@@ -205,10 +205,6 @@ input:checked + .slider:before {
   letter-spacing: 2px;
   font-weight: 600;
   display: none;
-  /* position: absolute;
-  top: 10%;
-  left: 30%;
-  transform: translate(-20% , -20%); */
   z-index: 3;
 }
 
@@ -272,15 +268,24 @@ input:checked + .slider:before {
   font-size: 12px;
   color: var(--accent);
   font-family: "Arame Mono";
-  text-decoration: none;
 }
 .project-card .popup a {
   color: var(--accent);
-  text-decoration: none;
 }
 .project-card .popup a:visited {
   color: var(--accent); /* This ensures visited links stay the same color */
 }
-.project-card .popup a:hover {
-  text-decoration: underline; /* This adds an underline on hover, you can remove this if you don't want it */
+.github-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.github-link a {
+  margin-right: 5px;
+  text-decoration: none;
+}
+
+.github-link a:hover {
+  text-decoration: underline;
 }
