--- a/main.css
+++ b/main.css
@@ -21,6 +21,11 @@ body {
   height: 100vh;
   background-color: var(--bg);
   font-family: "Arame Mono";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  z-index: -1;
 }
 
 .menu-container {
@@ -100,9 +105,9 @@ body {
 
   #controls-container {
     position: fixed;
-    width: 50%;
-    height: 15%;
-    bottom: -5%;
+    width: 70%;
+    height: 20%;
+    bottom: 0%;
     left: 50%;
     transform: translateX(-50%) translateY(100%);
     display: flex;
@@ -155,8 +160,83 @@ body {
     z-index: 2;
 }
 
-  /* The switch - the box around the slider */
-  .switch {
+.button-container {
+  height: 65px;
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.btn {
+  border: 3px solid #ffffff;
+  display: inline-block;
+  padding: 5px;
+  position: relative;
+  text-align: center;
+  transition: background 600ms ease, color 600ms ease;
+  font-size: 14px;
+  width: 100%;
+  height: 100%;
+}
+
+input[type="radio"].toggle {
+  display: none;
+}
+
+input[type="radio"].toggle + label {
+  cursor: pointer;
+  min-width: 30px;
+  min-height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input[type="radio"].toggle + label:hover {
+  background: none;
+  color: #ffffff;
+}
+
+input[type="radio"].toggle + label:after {
+  background: #ffffff;
+  content: "";
+  height: 100%;
+  position: absolute;
+  top: 0;
+  transition: left 200ms cubic-bezier(0.77, 0, 0.175, 1);
+  width: 100%;
+  z-index: -1;
+}
+
+input[type="radio"].toggle.toggle-left + label {
+  border-right: 0;
+}
+
+input[type="radio"].toggle.toggle-left + label:after {
+  left: 100%;
+}
+
+input[type="radio"].toggle.toggle-right + label {
+  margin-left: -3px;
+}
+
+input[type="radio"].toggle.toggle-right + label:after {
+  left: -100%;
+}
+
+input[type="radio"].toggle:checked + label {
+  cursor: default;
+  color: #000000;
+  transition: color 200ms;
+}
+
+input[type="radio"].toggle:checked + label:after {
+  left: 0;
+}
+  /* old swith */
+  /* .switch {
     position: relative;
     display: inline-block;
     width: 60px;
@@ -164,12 +244,11 @@ body {
     z-index: 1000;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
-}
+} */
 
 /* The slider */
 .slider {
@@ -222,7 +301,7 @@ input:checked + .slider:before {
   left: 50%;
   transform: translate(-50% , -50%);
   z-index: 3;
-  /* background-color: var(--accent); */
+  display: none;
 }
 
 .welcome-text-container {
