--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
   @font-face {
@@ -106,7 +110,7 @@ body {
   #controls-container {
     position: fixed;
     width: 70%;
-    height: 20%;
+    height: 22%;
     bottom: 0%;
     left: 50%;
     transform: translateX(-50%) translateY(100%);
@@ -119,10 +123,9 @@ body {
     z-index: 2000;
 }
 .circle {
-  width: 50px;
-  height: 50px;
-  background-color: turquoise; /*for testing until I figure everything out*/
+  background-color: var(--accent);
   border-radius: 50%;
+  
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -130,14 +133,16 @@ body {
 }
 #open-circle{
   position: fixed;
-  bottom: 20px;
+  width: 25px;
+  height: 25px;
+  bottom: 30px;
   left: 50%;
   transform: translate(-50%);
   z-index: 2001;
 }
 #close-circle {
   position: absolute;
-  top: 0%;
+  top: 8%;
   right: 10px;
   width: 30px;
   height: 30px;
