--- a/main.css
+++ b/main.css
@@ -158,12 +158,12 @@ body {
     border: 2px solid var(--accent);
   } */
 
-  #light-rotation-slider {
+  /* #light-rotation-slider {
     accent-color: var(--accent);
     color: var(--bg);
     width: 100%;
     z-index: 2;
-}
+} */
 
 .button-container {
   height: 65px;
@@ -410,4 +410,80 @@ input:checked + .slider:before {
 
 .github-link a:hover {
   text-decoration: underline;
+}
+
+input[type="range"] { 
+    margin: auto;
+    -webkit-appearance: none;
+    position: relative;
+    overflow: hidden;
+    height: 45px;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 0; /* iOS */
+}
+
+::-webkit-slider-runnable-track {
+    background: var(--accent);
+}
+
+/*
+ * 1. Set to 0 width and remove border for a slider without a thumb
+ * 2. Shadow is negative the full width of the input and has a spread 
+ *    of the width of the input.
+ */
+::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 20px; /* 1 */
+    height: 40px;
+    background: #fff;
+    box-shadow: -200px 0 0 200px dodgerblue; /* 2 */
+    border: 2px solid #999; /* 1 */
+}
+
+::-moz-range-track {
+    height: 40px;
+    background: var(--bg);
+    border: 3px solid var(--accent);
+}
+
+::-moz-range-thumb {
+    background: #fff;
+    height: 45px;
+    width: 20px; /* 1 */
+    border: 3px solid var(--bg); /* 1 */
+    border-radius: 0 !important;
+    box-shadow: -800px 0 0 800px var(--accent);
+    box-sizing: border-box;
+}
+
+::-ms-fill-lower { 
+    background: dodgerblue;
+}
+
+::-ms-thumb { 
+    background: #fff;
+    border: 2px solid #999; /* 1 */
+    height: 40px;
+    width: 20px; /* 1 */
+    box-sizing: border-box;
+}
+
+::-ms-ticks-after { 
+    display: none; 
+}
+
+::-ms-ticks-before { 
+    display: none; 
+}
+
+::-ms-track { 
+    background: #ddd;
+    color: transparent;
+    height: 40px;
+    border: none;
+}
+
+::-ms-tooltip { 
+    display: none;
 }
