--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    /* overflow: hidden; */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -30,6 +30,7 @@ body {
   align-items: center;
   min-height: 100%;
   z-index: -1;
+  overflow: hidden;
 }
 
 .menu-container {
@@ -507,8 +508,18 @@ input[type="range"] {
 }
 
 .info-text-wall-container {
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
   color: var(--white);
   margin: 300px;
+}
+
+.info-text-wall-container::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
 }
 
 .info-text-wall-container h2 {
@@ -516,3 +527,12 @@ margin-bottom: 15px;
 margin-top: 15px;
 }
 
+#background-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* filter: blur(5px); ill leave this here in case I want to blur it */
+}
