redoing gallery, following codegrid video, looks so much cooler

--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ body {
   align-items: center;
   min-height: 100%;
   z-index: -1;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .menu-container {
